--- a/Halloween Git Project 2023.html
+++ b/Halloween Git Project 2023.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <a href="./Joyeux halloween.html"></a>
+    <a href="./happy halloween.html"></a>
+    <a href="./feliz halloween.html"></a>
+    <a href="./felice halloween.html"></a>
+
 </body>
 </html>
